--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,6 +23,7 @@ html {
 
 #app {
   height: 100%;
+  background-color: #efeff0;
 }
 
 *,
@@ -68,3 +69,16 @@ div:focus {
   display: flex;
 
 }
+.mainBox {
+  padding: 0 190px;
+  min-height: 400px;
+  //height: 400px;
+  .mainContent{
+    margin: 20px;
+    padding: 10px;
+    height: 100%;
+    background-color: #fff;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,.12), 0 0 6px 0 rgba(0,0,0,.04);
+  }
+}
+
