--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,7 +23,6 @@ html {
 
 #app {
   height: 100%;
-  background-color: #efeff0;
 }
 
 *,
@@ -79,6 +78,9 @@ div:focus {
     height: 100%;
     background-color: #fff;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,.12), 0 0 6px 0 rgba(0,0,0,.04);
+  }
+  .mainList{
+    padding: 20px;
   }
 }
 
