--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -95,3 +95,12 @@ div:focus {
   }
 }
 
+.box-card{
+  margin: 10px;
+  .box-title{
+    text-align: center;
+    font-size: 22px;
+    font-weight: bold;
+  }
+}
+
