--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -136,6 +136,6 @@ div:focus {
   border-radius: 5px;
 }
 
-.el-menu--horizontal .el-menu .el-menu-item:hover{
+.el-menu--horizontal .el-menu .el-menu-item:hover, .el-menu--horizontal>.el-menu-item:not(.is-disabled):hover{
   background-color: #f99904;
 }
