--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -133,12 +133,12 @@ div:focus {
 //  font-size: 20px;
 //  font-weight: bold;
 //}
-.el-menu--horizontal>.el-submenu .el-submenu__title:hover, .el-menu--horizontal>.el-menu-item:hover{
-  background-color: #1989fa;
-  color: #fff!important;
-  border-radius: 5px;
-}
-
+//.el-menu--horizontal>.el-submenu .el-submenu__title:hover, .el-menu--horizontal>.el-menu-item:hover{
+//  background-color: #1989fa;
+//  color: #fff!important;
+//  border-radius: 5px;
+//}
+//
 .el-menu--horizontal .el-menu .el-menu-item:hover, .el-menu--horizontal>.el-menu-item:not(.is-disabled):hover{
   background-color: #1989fa;
   color: #fff!important;
